--- a/src/style/fichelogement.scss
+++ b/src/style/fichelogement.scss
@@ -110,6 +110,7 @@ host - nom et photo -, tags et rating)  */
         width: 100%;
         gap: 0;
         flex-direction: column;
+        font-size: 14px;
         }
 
         & button {
@@ -135,6 +136,7 @@ host - nom et photo -, tags et rating)  */
         }
     }
 }
+
 
 /*Title and location*/
 .title {
