--- a/src/style/header-footer.scss
+++ b/src/style/header-footer.scss
@@ -8,16 +8,17 @@ $text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 
 /*Body général*/
 
-* {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 24px
-}
-
 body {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: 0;  
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    @media (max-width: 767.98px) {
+        font-size: 12px;
+    }
+
 }
 
 /*Header*/
